<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:layout_span="2"
            android:text="@string/title"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_span="2"
            android:layout_marginBottom="12dp"
            android:text="@string/tips"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/account"/>
        <EditText
            android:id="@+id/account"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:inputType="textPassword"/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/confirm"/>
    </TableRow>
</TableLayout>