<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:layout_span="2"
            android:text="@string/title"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_span="2"
            android:text="@string/tips"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/account"/>
        <EditText
            android:id="@+id/account"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="确定"/>
    </TableRow>
</TableLayout>